--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>www</h1>
+    <h1>mustache</h1>
     <button id="btn">button</button>
     <div id="container"></div>
     <script src="/xuni/bundle.js"></script>
