--- a/www/index.html
+++ b/www/index.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>mustache</h1>
-    <button id="btn">button</button>
+    <!-- <h1>mustache</h1> -->
+    <h1>响应式</h1>
+    <!-- <button id="btn">button</button> -->
     <div id="container"></div>
     <script src="/xuni/bundle.js"></script>
     
