--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,11 @@
     <title>
         <%= htmlWebpackPlugin.options.title %>
     </title>
-    <script src="../dist/main.js"></script>
 </head>
 <body>
     <!-- <h1>mustache</h1> -->
     <!-- <button id="btn">button</button> -->
-    <div id="app">ceshi</div>
-    asdasdasd
+    <div id="app">测试</div>
     <!-- <script src="/xuni/index.js"></script> -->
     
 </body>
